fix(operationViewer): improve UI spacing

--- a/vyne-query-service/src/main/web/src/app/operation-view/operation-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/operation-view/operation-view.component.scss
@@ -6,6 +6,7 @@
 
 .row {
   display: flex;
+  margin-bottom: 1rem;
   span {
     font-size: 0.85rem;
     margin-right: 1rem;
